Moved some custom exceptions and refactored the entire GlobalExceptionHandler